<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/ic_callout_item_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:text="@string/point_name" />

        <TextView
            android:id="@+id/tvN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:text="@string/n_coordinate" />

        <TextView
            android:id="@+id/tvE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:text="@string/e_coordinate" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/selectButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select" />
    </LinearLayout>

    <!--    <TextView-->
    <!--        android:id="@+id/textNativeView"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:textSize="10sp"-->
    <!--        android:padding="3dp"-->
    <!--        android:gravity="center"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintEnd_toStartOf="@id/closeNativeView"-->
    <!--        tools:ignore="SmallSp" />-->

        <ImageView
            android:id="@+id/closeNativeView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_close_24_black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <!--    <Button-->
    <!--        android:id="@+id/selectButton"-->
    <!--        android:layout_width="70dp"-->
    <!--        android:layout_height="30dp"-->
    <!--        android:text="Select"-->
    <!--        android:gravity="center"-->
    <!--        android:textSize="6sp"-->
    <!--        android:layout_marginStart="12dp"-->
    <!--        android:layout_marginEnd="12dp"-->
    <!--        android:layout_marginBottom="4dp"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/textNativeView"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        tools:ignore="HardcodedText,SmallSp" />-->

</androidx.constraintlayout.widget.ConstraintLayout>